5_main_page_admin_started

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -17,3 +17,5 @@
         %td= link_to 'Показать', post
         %td= link_to 'Редактировать', edit_post_path(post)
         %td= link_to 'Удалить', post, method: :delete, data: { confirm: 'Вы уверены?' }
+%br/
+= link_to 'Новый пост', new_post_path
