--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,18 +1,18 @@
 .registration_block
-  %h2 Sign up
+  %h2= 'Sign up'
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = devise_error_messages!
-    .field
-      = f.label :email
-      = f.email_field :email, autofocus: true
-    .field
-      = f.label :password
+    .form-group
+      = f.label :email, class:'control-label'
+      = f.email_field :email, autofocus: true, class: 'form-control'
+    .form-group
+      = f.label :password, class: 'control-label'
       - if @minimum_password_length
         %em
           (#{@minimum_password_length} characters minimum)
-      = f.password_field :password, autocomplete: "off"
-    .field
-      = f.label :password_confirmation
-      = f.password_field :password_confirmation, autocomplete: "off"
-    %button.btn.btn-default{type: 'submit'} Sign up
+      = f.password_field :password, autocomplete: 'off', class: 'form-control'
+    .form-group
+      = f.label :password_confirmation, class: 'control-label'
+      = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
+    = f.submit 'Sign up', class: 'btn btn-primary'
     = render "devise/shared/links"
