--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -9,3 +9,38 @@
   margin-left:auto;
   margin-right:auto;
 }
+.inline {
+  display: inline;
+}
+header {
+  background-color: #f5f5f5;
+  border-bottom: 1px solid #e5e5e5;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-bottom-color: rgb(229, 229, 229);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.header-nav-link {
+    padding: 4px 8px;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 20px;
+    color: #333;
+}
+.pull-right {
+  float: right !important;
+}
+.mb-0 {
+  margin-bottom: 0px;
+}
+.site-footer {
+    position: relative;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-top: 40px;
+    font-size: 12px;
+    line-height: 1.5;
+    color: #767676;
+    border-top: 1px solid #eee;
+}
