--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -5,8 +5,17 @@
 %p
   %strong Body:
   = @post.body
-%p
-  %strong User:
-  = @post.user
-= link_to 'Edit', edit_post_path(@post), class: 'btn btn-primary mt-10'
-= link_to 'Back', posts_path, class: 'btn btn-primary mt-10'
+= link_to 'Редактировать', edit_post_path(@post)
+|
+= link_to 'Назад', posts_path
+.list-group.comments
+  %a.list-group-item.active
+    = 'Комментарии:'
+  - @post.comments.each do |comment|
+    %a.list-group-item
+      = comment.body
+.row
+  .col-md-6
+    %textarea.form-control#comment_body
+    %input#post_id{ value: @post.id, hidden: true }
+    %button.btn.btn-primary.mt-10.create_comment= 'Добавить комментарий'
