--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -16,6 +16,5 @@
         %td= post.body
         %td= post.user.email
         %td= link_to 'Показать', post
-        %td= link_to 'Выход', edit_post_path(post)
+        %td= link_to 'Редактировать', edit_post_path(post)
         %td= link_to 'Удалить', post, method: :delete, data: { confirm: 'Вы уверены?' }
-
