#7 Working on post page

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -15,7 +15,7 @@
     %a.list-group-item
       = comment.body
 .row
-  .col-md-6
+  .col-md-6{"data-no-turbolink" => ""}
     %textarea.form-control#comment_body
     %input#post_id{ value: @post.id, hidden: true }
     %button.btn.btn-primary.mt-10.create_comment= 'Добавить комментарий'
