--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,13 +1,12 @@
 %p#notice= notice
-
-%h1 БЛОГ
+%h1= 'БЛОГ'
 = link_to 'Новый пост', new_post_path
 %table.table
   %thead
     %tr
-      %th Название
-      %th Тело поста
-      %th Пользователь
+      %th= 'Название'
+      %th= 'Тело поста'
+      %th= 'Пользователь'
       %th{:colspan => "3"}
   %tbody
     - @posts.each do |post|
