#10 Started working on CSS with fluent design

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,15 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.test {
+  background-color: red;
+}
+#header-content {
+  text-align: right;
+}
+.post {
+  margin-top: 15px;
+}
+.icon   {
+  background-color: blue;
+}
