#10 Added fluent svg elements

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -11,26 +11,17 @@
 .icon   {
   background-color: blue;
 }
+#svg-container{
+  width: 100%;
+  height: 36px;
+}
+.svg-block{
+  width: 100%;
+  height: 100%;
+  fill: violet;
+}
 
 .post{
   background-color: yellow;
-}
-
-#triangle-bottom{border: 20px solid transparent;
-  border-left: 20px solid green;
-  border-top: 20px solid green;}
-
-#triangle-top{
-  margin-top: 15px;
-	width: 100%;
-  height: 30%;
-	border-bottom: 5rem solid red;
-	border-left:  10rem solid transparent;
-}
-.col-xs-12#triangle-top{
-  margin-top: 15px;
-	width: 100%;
-  height: 30%;
-	border-bottom: 5vw solid red;
-	border-left: 50rem solid transparent;
+  margin-bottom: 0;
 }
