--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -9,7 +9,7 @@
 }
 
 .icon   {
-  background-color: blue;
+
 }
 #svg-container{
   width: 100%;
@@ -18,10 +18,29 @@
 .svg-block{
   width: 100%;
   height: 100%;
-  fill: violet;
 }
 
 .post{
-  background-color: yellow;
+  background-color: white;
   margin-bottom: 0;
+  text-align: center;
+  td{ border-color: white;}
+  th{ font-size: 2rem;
+      text-align: center;
+      border-color: white;
+      a{
+        color: red;
+        transition: color 1.5s;
+        text-decoration: none;
+        background-color: none;
+      &:hover{
+          color: purple;
+              }
+        }
+    }
+  td.time{
+    font-size: 0.5rem;
+    color: blue;
+    padding: 0;
+  }
 }
