#7 Added deleting comments on AJAX

--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -12,8 +12,12 @@
   %a.list-group-item.active
     = 'Комментарии:'
   - @post.comments.each do |comment|
-    %a.list-group-item
-      = comment.body
+    - if comment.body?
+      %a.list-group-item
+        = comment.body
+        %input#comment_id{ value: comment.id, hidden: true }
+        %button.btn.btn-primary.mt-10.delete_comment= 'Удалить комментарий'
+        %button.btn.btn-primary.mt-10.edit_comment= 'Редактировать комментарий'
 .row
   .col-md-6{"data-no-turbolink" => ""}
     %textarea.form-control#comment_body
