--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -39,7 +39,7 @@ header {
     padding-top: 40px;
     padding-bottom: 40px;
     margin-top: 40px;
-=======
+}
 body {
   background-color: #1c1c1c;
   color: #333;
@@ -124,10 +124,10 @@ div {
     line-height: 1.5;
     color: #767676;
     border-top: 1px solid #eee;
+  }
 }
 .mt-10 {
   margin-top: 10px;
 }
 #wrapper {
-
 }
