--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,6 +1,29 @@
 // Place all the styles related to the Posts controller here.
 // They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.head {
+  background: url(background.jpg);
+  color: white;
+}
+
+.plus {
+  background: url(plus.png);
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  transition: all 0.5s ease;
+}
+.plus:hover {
+  background: url(plus_hover.png);
+  width: 100px;
+  height: 100px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
 .test {
   background-color: red;
 }
@@ -8,9 +31,17 @@
   text-align: right;
 }
 
-.icon   {
-
+.ico{
+  border: 0;
 }
+.icon{
+    color: red;
+    transition: color 1s;
+    text-decoration: none;
+    background-color: none;}
+.icon:hover{
+      color: purple;
+          }
 #svg-container{
   width: 100%;
   height: 36px;
@@ -20,7 +51,8 @@
   height: 100%;
 }
 
-.post{
+table.table.post{
+  border: 0px;
   background-color: white;
   margin-bottom: 0;
   text-align: center;
@@ -30,7 +62,7 @@
       border-color: white;
       a{
         color: red;
-        transition: color 1.5s;
+        transition: color 1s;
         text-decoration: none;
         background-color: none;
       &:hover{
