--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,16 +6,25 @@
     = stylesheet_link_tag 'application', media: 'all'
     = javascript_include_tag 'application'
   %body
-    %header
-      .container
+    %header.container
+      .row
         %ul.list-unstyled.inline.pull-right.mb-0
           - if user_signed_in?
-            %li.inline= link_to 'Sign out', destroy_user_session_path, method: :delete, class: 'btn btn-link header-nav-link'
-            %li.inline= link_to 'Edit profile', edit_user_registration_path, class: 'btn btn-link header-nav-link'
+            %li.inline= link_to 'Выход', destroy_user_session_path, method: :delete, class: 'btn btn-link header-nav-link'
+            %li.inline= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
           -else
-            %li.inline= link_to 'Log in', new_user_session_path, class: 'btn btn-link header-nav-link'
-            %li.inline= link_to 'Sign up', new_user_registration_path, class: 'btn btn-link header-nav-link'
+            %li.inline= link_to 'Вход', new_user_session_path, class: 'btn btn-link header-nav-link'
+            %li.inline= link_to 'Регистрация', new_user_registration_path, class: 'btn btn-link header-nav-link'
+      .row.head
+        %h1= 'БЛОГ'
+        #svg-container
+          %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
+            %polygon{:fill => "white", :points => "0,100 100,0 100,100"}
     %main.container
+      .row.no-padding
+        #svg-container.bg-white
+          %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
+            %polygon{:fill => "black", :points => "0,100 100,0 100,100"}
       = yield
     %footer.container
       .site-footer
