--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -144,6 +144,11 @@ div {
 main {
   background-color: black;
 }
+
+footer {
+  color: red;
+  background-color: #202020;
+}
 .no-padding{
   padding: 0;
 }
