--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,6 +27,10 @@
             %polygon{:fill => "black", :points => "0,100 100,0 100,100"}
       = yield
     %footer.container
+      .row
+        #svg-container
+          %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
+            %polygon{:fill => "black", :points => "0,100 100,0 0,0"}
       .site-footer
         %ul.list-unstyled.inline
           %li.inline
