--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -13,11 +13,11 @@
   display: inline;
 }
 header {
-  background-color: #f5f5f5;
   border-bottom: 1px solid #e5e5e5;
   border-bottom-width: 1px;
   border-bottom-style: solid;
   border-bottom-color: rgb(229, 229, 229);
+  background-color: #202020;
   padding-top: 0px;
   padding-bottom: 0px;
 }
@@ -30,9 +30,7 @@ header {
     color: red;
     transition: color 1s;
 }
-.header-nav-link:visited{
-  color: red;
-}
+
 .header-nav-link:hover{
   color: purple;
   text-decoration: none;
@@ -75,10 +73,6 @@ pre {
 
 a {
   color: #000;
-
-  &:visited {
-    color: #666;
-  }
 
   &:hover {
     color: #fff;
