--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,20 +1,20 @@
 %p#notice= notice
 .row
-  .col-md-12
+  .col-xs-12.col-sm-6.col-md-4.col-lg-4
+    #svg-container
+      %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
+        %polygon{:fill => "white", :points => "0,100 30,0 100,0 100,100"}
+    = link_to new_post_path do
+      %table.table.post
+        %tr
+          %td.plus{colspan: 3, rowspan: 4}
+    #svg-container.margin-bottom
+      %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
+        %polygon{:fill => "white", :points => "100,0 70,100 0,100 0,0"}
+  - @posts.order! 'created_at DESC'
+  - @posts. each do |post|
     .col-xs-12.col-sm-6.col-md-4.col-lg-4
-      #svg-container
-        %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
-          %polygon{:fill => "white", :points => "0,100 30,0 100,0 100,100"}
-      = link_to new_post_path do
-        %table.table.post
-          %tr
-            %td.plus{colspan: 3, rowspan: 4}
-      #svg-container.margin-bottom
-        %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
-          %polygon{:fill => "white", :points => "100,0 70,100 0,100 0,0"}
-    - @posts.order! 'created_at DESC'
-    - @posts. each do |post|
-      .col-xs-12.col-sm-6.col-md-4.col-lg-4
+      .clearfix
         #svg-container
           %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
             %polygon{:fill => "white", :points => "0,100 30,0 100,0 100,100"}
