--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -13,5 +13,6 @@
   .form-group
     = f.label :body
     = f.text_area :body, class: 'form-control'
+    = f.hidden_field :user_id, value: author
   .actions
     = f.submit class: 'btn btn-primary'
