--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -7,7 +7,7 @@
   = @post.body
 = link_to 'Редактировать', edit_post_path(@post)
 |
-= link_to 'Назад', posts_path
+= link_to 'Назад', root_path
 .list-group.comments
   %a.list-group-item.active
     = 'Комментарии:'
