--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,17 +1,3 @@
-.registration_block {
-  margin-top:50px;
-  border-color: black;
-  border-width: thin;
-  border-style: solid;;
-  border-radius: 5px;
-  width: 50%;
-  padding: 20px;
-  margin-left:auto;
-  margin-right:auto;
-}
-.inline {
-  display: inline;
-}
 header {
   border-bottom: 1px solid #e5e5e5;
   border-bottom-width: 1px;
@@ -22,32 +8,6 @@ header {
   padding-bottom: 0px;
 }
 
-.header-nav-link {
-    padding: 4px 8px;
-    font-size: 13px;
-    font-weight: 600;
-    line-height: 20px;
-    color: red;
-    transition: color 1s;
-}
-
-.header-nav-link:hover{
-  color: purple;
-  text-decoration: none;
-}
-.pull-right {
-  float: right !important;
-}
-.mb-0 {
-  margin-bottom: 0px;
-  margin-top: 0px;
-}
-.site-footer {
-    position: relative;
-    padding-top: 40px;
-    padding-bottom: 40px;
-    margin-top: 40px;
-}
 body {
   background-color: white;
   color: #333;
@@ -56,6 +16,15 @@ body {
   line-height: 18px;
   margin: 33px;
   margin-top: 0px;
+}
+
+main {
+  background-color: black;
+}
+
+footer {
+  color: red;
+  background-color: #202020;
 }
 
 p, ol, ul, td {
@@ -95,14 +64,86 @@ div {
   }
 }
 
-#notice {
-  color: green;
+svg {
+  height: 100%;
+  width: 100%;
+  fill: white;
+}
+
+text {
+  font-family: Verdana;
+  font-size: 5rem;
+}
+
+.black {
+  fill: black;
+}
+
+.registration_block {
+  margin-top:50px;
+  border-color: black;
+  border-width: thin;
+  border-style: solid;;
+  border-radius: 5px;
+  width: 50%;
+  padding: 20px;
+  margin-left:auto;
+  margin-right:auto;
+}
+
+.inline {
+  display: inline;
+}
+
+.header-nav-link {
+    padding: 4px 8px;
+    font-size: 13px;
+    font-weight: 600;
+    line-height: 20px;
+    color: red;
+    transition: color 1s;
+}
+
+.header-nav-link:hover{
+  color: purple;
+  text-decoration: none;
+}
+
+.pull-right {
+  float: right !important;
+}
+
+.mb-0 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
+
+.site-footer {
+    position: relative;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-top: 40px;
 }
 
 .field_with_errors {
   padding: 2px;
   background-color: red;
   display: table;
+}
+
+.mt-10 {
+  margin-top: 10px;
+}
+
+.no-padding{
+  padding: 0;
+}
+.bg-white{
+  background-color: white;
+}
+
+#notice {
+  color: green;
 }
 
 #error_explanation {
@@ -130,22 +171,4 @@ div {
     color: #767676;
     border-top: 1px solid #eee;
   }
-}
-.mt-10 {
-  margin-top: 10px;
-}
-
-main {
-  background-color: black;
-}
-
-footer {
-  color: red;
-  background-color: #202020;
-}
-.no-padding{
-  padding: 0;
-}
-.bg-white{
-  background-color: white;
 }
