--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -2,38 +2,37 @@
 .row
   .col-xs-12.col-sm-6.col-md-4.col-lg-4
     #svg-container
-      %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
-        %polygon{:fill => "white", :points => "0,100 30,0 100,0 100,100"}
+      %svg{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
+        %polygon{points: '0,100 30,0 100,0 100,100'}
     = link_to new_post_path do
       %table.table.post
         %tr
-          %td.plus{colspan: 3, rowspan: 4}
+          %td.plus
     #svg-container.margin-bottom
-      %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
-        %polygon{:fill => "white", :points => "100,0 70,100 0,100 0,0"}
+      %svg{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
+        %polygon{points: '100,0 70,100 0,100 0,0'}
   - @posts.order! 'created_at DESC'
   - @posts. each do |post|
     .col-xs-12.col-sm-6.col-md-4.col-lg-4
-      .clearfix
-        #svg-container
-          %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
-            %polygon{:fill => "white", :points => "0,100 30,0 100,0 100,100"}
-        %table.table.post
-          %tr
-            %th.title{colspan: 3}= link_to post.title, post
-          %tr
-            %td.time{colspan: 3}= post.created_at.strftime("%e, %B %Y %X")
-          %tr
-            %td{colspan: 3}= post.body
-          %tr
-            %td
-              =link_to edit_post_path(post), class: "btn btn-default icon" do
-                %span.glyphicon.glyphicon-pencil{"aria-hidden" => "true"}
-            %td
-              =link_to post, method: :delete, data: { confirm: 'Вы уверены?' }, class: "btn btn-default icon" do
-                %span.glyphicon.glyphicon-trash{"aria-hidden" => "true"}
-        = link_to post, class: "read" do
-          #svg-container.margin-bottom
-            %svg{:height => "100%", :width => "100%", :viewbox => "0 0 100 100", :preserveAspectRatio => "none"}
-              %polygon{:points => "100,0 70,100 0,100 0,0"}
-              %text{"font-family" => "Verdana", "font-size" => "5rem", "textLength" => "60", "lengthAdjust" => "spacingAndGlyphs", :x => "5", :y => "60"} Продолжить чтение
+      #svg-container
+        %svg{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
+          %polygon{points: '0,100 30,0 100,0 100,100'}
+      %table.table.post
+        %tr
+          %th.title{colspan: 3}= link_to post.title, post
+        %tr
+          %td.time{colspan: 3}= post.created_at.strftime("%e, %B %Y %X")
+        %tr
+          %td.text{colspan: 3}= truncate(post.body, :length => 100)
+        %tr
+          %td
+            =link_to edit_post_path(post), class: 'btn btn-default icon' do
+              %span.glyphicon.glyphicon-pencil{"aria-hidden" => "true"}
+          %td
+            =link_to post, method: :delete, data: { confirm: 'Вы уверены?' }, class: 'btn btn-default icon' do
+              %span.glyphicon.glyphicon-trash{"aria-hidden" => "true"}
+      = link_to post do
+        #svg-container.margin-bottom
+          %svg.read{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
+            %polygon{points: '100,0 70,100 0,100 0,0'}
+            %text{textLength: '60', lengthAdjust: 'spacingAndGlyphs', x: '5', y: '60'} Продолжить чтение
