--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,13 +10,13 @@
       .row
         %ul.list-unstyled.inline.pull-right.mb-0
           - if user_signed_in?
+            %li.inline= link_to 'Профиль', user_profile_path(current_user.username), class: 'btn btn-link header-nav-link'
             %li.inline= link_to 'Выход', destroy_user_session_path, method: :delete, class: 'btn btn-link header-nav-link'
-            %li.inline= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
           -else
             %li.inline= link_to 'Вход', new_user_session_path, class: 'btn btn-link header-nav-link'
             %li.inline= link_to 'Регистрация', new_user_registration_path, class: 'btn btn-link header-nav-link'
       .row.head
-        %h1= 'БЛОГ'
+        %h1= link_to 'БЛОГ', root_path
         #svg-container
           %svg{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
             %polygon{points: '0,100 100,0 100,100'}
