--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -2,14 +2,19 @@
   .col-xs-12.col-sm-12.col-md-12.col-lg-12
     %table.table.profile
       %tr
-        %th= @user.username
+        %th{colspan: '2'}= @user.username
       %tr
-        %td= image_tag("profile.svg")
+        %td{colspan: '2'}= image_tag("profile.svg")
       %tr
-        %td= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
-      %tr
-        %td Ваши комментарии:
-      -@comments.each do |comment|
+        %td{colspan: '2'}= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
+      -if @user.comments!=[]
         %tr
-          %td= truncate(comment.body, length: 30)
-          %td= comment.post_id
+          %td= 'Ваши комментарии'
+          %td= 'к посту:'
+        -@user.comments.each do |comment|
+          %tr
+            %td= truncate(comment.body, length: 30)
+            %td= link_to comment.post.title, post_path(comment.post_id)
+      -else
+        %tr
+          %td{colspan: '2'}= 'Вы не оставили ни одного комментария'
