--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,20 +17,14 @@
             %li.inline= link_to 'Регистрация', new_user_registration_path, class: 'btn btn-link header-nav-link'
       .row.head
         %h1= link_to 'БЛОГ', root_path
-        #svg-container
-          %svg{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
-            %polygon{points: '0,100 100,0 100,100'}
+        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 100,100', fill: 'white'}
     %main.container
       .row.no-padding
-        #svg-container.bg-white
-          %svg.black{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
-            %polygon{points: '0,100 100,0 100,100'}
+        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: 'white'}
       = yield
     %footer.container
       .row
-        #svg-container
-          %svg.black{viewbox: '0 0 100 100', preserveAspectRatio: 'none'}
-            %polygon{points: '0,100 100,0 0,0'}
+        = render partial: 'layouts/svg', locals: {points: '0,100 100,0 0,0', fill: 'black'}
       .site-footer
         %ul.list-unstyled.inline
           %li.inline
