--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -21,6 +21,10 @@ table.table.post {
       height:72px;
       max-height: 72px;
     }
+  td.body {
+    text-align: justify;
+    font-size: 1.5rem;
+  }
 }
 
 .head {
@@ -73,6 +77,7 @@ table.table.post {
 
 .icon {
   border: 0;
+  background-color: transparent;
   color: red;
   transition: all 0.5s;
   text-decoration: none;
@@ -81,6 +86,10 @@ table.table.post {
   color: purple;
   transform: scale(1.5, 1.5);
   background-color: transparent;
+}
+.icon:active {
+  background-color: transparent;
+  border-color: transparent;
 }
 
 #svg-container {
