--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -6,7 +6,7 @@
       %tr
         %th.title{colspan: '2'}= @post.title
       %tr
-        %td.body{colspan: '2'}= @post.body
+        %td.body{colspan: '2'}= @post.body.prep.newlines_to_br
       %tr
         %td= link_to 'Редактировать', edit_post_path(@post)
         %td= link_to 'Назад', root_path
@@ -14,14 +14,17 @@
     .list-group.comments
       %a.list-group-item.active
         = 'Комментарии:'
-      - @post.comments.each do |comment|
-        - if comment.body?
-          %a.list-group-item
-            %input.body_edit{ value: comment.body, hidden: true}
-            .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
-            %input.comment_id{ value: comment.id, hidden: true }
-            %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon
-            %button.btn.btn-default.edit_comment.glyphicon.glyphicon-pencil.icon
+      -if @post.comments.count != 0
+        - @post.comments.each do |comment|
+          - if comment.body?
+            %a.list-group-item
+              %input.body_edit{ value: comment.body, hidden: true}
+              .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
+              %input.comment_id{ value: comment.id, hidden: true }
+              %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
+              %button.btn.btn-default.edit_comment.glyphicon.glyphicon-pencil.icon.float-right
+      -else
+        %h4.no-comment='Ещё никто не оставил комментарий. Будьте первым!'
     .row
       - if user_signed_in?
         .col-md-6
