--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,7 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 table.table.profile {
-  th{
+  text-align: center;
+  th {
     font-size: 3rem;
     text-align: center;
     border: 0;
