--- a/app/views/devise/confirmations/new.html.haml
+++ b/app/views/devise/confirmations/new.html.haml
@@ -1,10 +1,10 @@
-%h2 Resend confirmation instructions
+%h2 Повторно отправить инструкции подтверждения
 = form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f|
   = devise_error_messages!
   .field
-    = f.label :username
+    = f.label :Имя_пользователя
     %br/
     = f.text_field :username, autofocus: true, value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email)
   .actions
-    = f.submit "Resend confirmation instructions"
+    = f.submit "Отправить"
 = render "devise/shared/links"
