--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,33 +1,33 @@
 .registration_block
-  %h2= "Edit #{resource_name.to_s.humanize}"
+  %h2= "Редактировать"
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
     = devise_error_messages!
     .form-group
-      = f.label :username, class:'control-label'
+      = f.label :Имя_пользователя, class:'control-label'
       = f.text_field :username, autofocus: true, class: 'form-control'
-      = f.label :email, class: 'control-label'
+      = f.label :Электронная_почта, class: 'control-label'
       = f.email_field :email, autofocus: true, class: 'form-control'
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       %div
         Currently waiting confirmation for: #{resource.unconfirmed_email}
     .form-group
-      = f.label :password, class: 'control-label'
-      %i (leave blank if you don't want to change it)
+      = f.label :Новый_пароль, class: 'control-label'
+      %i (оставьте поле пустым, если не хотите менять пароль)
       = f.password_field :password, autocomplete: "off", class: 'form-control'
       - if @minimum_password_length
         %em
           = @minimum_password_length
-          characters minimum
+          знаков минимум
     .form-group
-      = f.label :password_confirmation, class: 'control-label'
+      = f.label :Подтверждение_пароля, class: 'control-label'
       = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
     .form-group
-      = f.label :current_password, class: 'control-label'
-      %i (we need your current password to confirm your changes)
+      = f.label :Текущий_пароль, class: 'control-label'
+      %i (для применения изменений)
       = f.password_field :current_password, autocomplete: "off", class: 'form-control'
     .form-group
-      = f.submit 'Update',  class: 'btn btn-primary'
-  %h3= 'Cancel my account'
+      = f.submit 'Обновить',  class: 'btn btn-primary'
+  %h3= 'Удалить мой аккаунт'
   %p
-    Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-default'}
-  = link_to 'Back', :back,  class: 'btn btn-primary'
+    Чем-то недовольны? #{button_to "Удалить", registration_path(resource_name), data: { confirm: 'Вы уверены?' }, method: :delete, class: 'btn btn-default'}
+  = link_to 'Назад', :back,  class: 'btn btn-primary'
