--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,20 +1,21 @@
 .registration_block
-  %h2= 'Sign up'
+  %h2= 'Регистрация'
   = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
     = devise_error_messages!
     .form-group
-      = f.label :username, class:'control-label'
+      = f.label :Имя_пользователя, class:'control-label'
       = f.text_field :username, autofocus: true, class: 'form-control'
-      = f.label :email, class:'control-label'
+      = f.label :Электронная_почта, class:'control-label'
       = f.email_field :email, autofocus: true, class: 'form-control'
     .form-group
-      = f.label :password, class: 'control-label'
+      = f.label :Пароль, class: 'control-label'
       - if @minimum_password_length
         %em
-          (#{@minimum_password_length} characters minimum)
+          (#{@minimum_password_length} символов минимум)
       = f.password_field :password, autocomplete: 'off', class: 'form-control'
     .form-group
-      = f.label :password_confirmation, class: 'control-label'
+      = f.label :Подтверждение_пароля, class: 'control-label'
       = f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'
-    = f.submit 'Sign up', class: 'btn btn-primary'
+    = f.submit 'Зарегистрироваться', class: 'btn btn-primary'
+    |
     = render "devise/shared/links"
