--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,7 +7,7 @@
         %td{colspan: '2'}= image_tag("profile.svg")
       %tr
         %td{colspan: '2'}= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
-      -if @user.comments!=[]
+      -if @user.comments.any?
         %tr
           %td= 'Ваши комментарии'
           %td= 'к посту:'
