--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,8 @@
       %tr
         %th{colspan: '2'}= @user.username
       %tr
-        %td{colspan: '2'}= image_tag("profile.svg")
+        %td{colspan: '2'}
+          %span.glyphicon.glyphicon-user.user
       %tr
         %td{colspan: '2'}= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
       -if @user.comments.any?
