--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,1 +1,21 @@
-.h1= @user.username
+.row
+  .col-xs-12.col-sm-12.col-md-12.col-lg-12
+    %table.table.profile
+      %tr
+        %th{colspan: '2'}= @user.username
+      %tr
+        %td{colspan: '2'}
+          %span.glyphicon.glyphicon-user.user
+      %tr
+        %td{colspan: '2'}= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
+      -if @user.comments.any?
+        %tr
+          %td= 'Ваши комментарии'
+          %td= 'к посту:'
+        -@user.comments.each do |comment|
+          %tr
+            %td= truncate(comment.body, length: 30)
+            %td= link_to comment.post.title, post_path(comment.post_id)
+      -else
+        %tr
+          %td{colspan: '2'}= 'Вы не оставили ни одного комментария'
