--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -14,16 +14,16 @@
     .list-group.comments
       %a.list-group-item.active
         = 'Комментарии:'
-      - @post.comments.each do |comment|
-        - if comment.body?
+      - if @post.comments.any?
+        - @post.comments.each do |comment|
           %a.list-group-item
             %input.body_edit{ value: comment.body, hidden: true}
             .comment_body.inline{ id: "comment_body_#{comment.id}"}= comment.body
             %input.comment_id{ value: comment.id, hidden: true }
             %button.btn.btn-default.delete_comment.glyphicon.glyphicon-trash.icon.red.float-right
             %button.btn.btn-default.edit_comment.glyphicon.glyphicon-pencil.icon.float-right
-        -else
-          %h4.no-comment='Ещё никто не оставил комментарий. Будьте первым!'
+      - else
+        %h4.no-comment= 'Ещё никто не оставил комментарий. Будьте первым!'
     .row
       - if user_signed_in?
         .col-md-6
