--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -8,20 +8,20 @@
           %span.glyphicon.glyphicon-user.user
       %tr
         %td{colspan: '2'}= link_to 'Редактировать профиль', edit_user_registration_path, class: 'btn btn-link header-nav-link'
-      -if @user.comments.any?
+      - if @user.comments.any?
         %tr
           %td= 'Ваши комментарии'
           %td= 'к посту:'
-        -@user.comments.each do |comment|
+        - @user.comments.each do |comment|
           %tr
             %td= truncate(comment.body, length: 30)
             %td= link_to comment.post.title, post_path(comment.post_id)
-      -else
+      - else
         %tr
           %td{colspan: '2'}= 'Вы не оставили ни одного комментария'
       %tr
-        %td{colspan: '2'} Список всех пользователей:
-      -@users.each do |user|
+        %td{colspan: '2'}= 'Список всех пользователей:'
+      - @users.each do |user|
         %tr
           %td= user.email
           %td= user.username
