--- a/app/views/posts/new.html.haml
+++ b/app/views/posts/new.html.haml
@@ -1,4 +1,4 @@
 .container
   %h1= 'Новый пост'
-  = render 'form', post: @post, author: @author.id
+  = render 'form', post: @post
   = link_to 'Назад', posts_path, class: 'btn btn-primary mt-10'
